syntax = "proto3";

message UserId {
    int32 id = 1;
}

message ArticlesResponse {
	string article = 1;
}

service Article {
	rpc GetArticle(UserId) returns (ArticlesResponse) {}
}
